	- Fixed #16815 (location of Structure::List is not defined.)
	- Fixed misparsing of C< 1-1 >
	- Fixed #18413: PPI::Node prune() implementation broken
	- Fixed #20428 (minor doc bug in PPI::Token::Symbol)
	- Resolved NOTABUG #20031 (PPI installation)
	- Resolved NOTABUG #20038 (PPI installation)
	- Fixed #19883: 'package' bareword used as hash key is detected as package statement

1.115   Sat 03 Jun 2006
	Summary:
	- Fixing rt.cpan.org bugs

	Details:
	- Fixed #19614: Suspicious code in PPI::Structure
	- Fixed #16831: until () { } not parsed as compound statement
	- NOTABUG #16834: "$a = 1 if ($a == 2)" vs "$a = 1 if $a == 2"
	- Fixed #19629: End of list mistakenly seen as end of statement
	- Fixed #18413: PPI::Node prune() implementation broken

1.114   Thu 25 May 2006
	Summary:
	- This release addresses only dependency issues

	Details:
	- Changed over from IO::Scalar to IO::String
	- Added a dependency on Task::Weaken so that we can make
	  various not-so-clueful downstream packagers play nicely.

1.113   Wed 10 May 2006
	Summary:
	- This release contains only build-time changes

	Details:
	- Upgraded to Module::Install 0.62
	- No features() used in this dist, so removing auto_install

1.112   Mon 24 Apr 2006
	Summary:
	- Emergency release to fix a bug that prevents install on perl > 5.8.4

	Details:
	- Small typo in the unicode-specific section of 14_charsets.t
	  prevents tests passing for anyone with a unicode-sane Perl version.
	- Added a test for strange locales that can't handle unicode,
	  and skip the unicode tests.

1.111   Sat 22 Apr 2006
	General
	- Moved from SourceForge CVS to new collaborative SVN repository
	- Fixed regressions other people had added since 1.110
	- Upgraded to Module::Install 0.62

	Details:
	- SourceForge was too hard to get into, so moved to specially designed
	  new SVN repository to make it easy for others to help out.
	- Moved t.data to t/data in line with current style and to reduce complexity.