@@ -1,14 +1,15 @@
 PPI::Document
-  PPI::Structure::Block  	{ ... }
-    PPI::Statement
-      PPI::Structure::List  	( ... )
-        PPI::Statement::Expression
-          PPI::Token::Number  	'0'
-      PPI::Token::Whitespace  	' '
-      PPI::Token::Operator  	'||'
-      PPI::Token::Whitespace  	' '
-      PPI::Structure::List  	( ... )
-        PPI::Statement::Expression
-          PPI::Token::Number  	'1'
-      PPI::Token::Structure  	';'
+  PPI::Statement
+    PPI::Structure::Block  	{ ... }
+      PPI::Statement
+        PPI::Structure::List  	( ... )
+          PPI::Statement::Expression
+            PPI::Token::Number  	'0'
+        PPI::Token::Whitespace  	' '
+        PPI::Token::Operator  	'||'
+        PPI::Token::Whitespace  	' '
+        PPI::Structure::List  	( ... )
+          PPI::Statement::Expression
+            PPI::Token::Number  	'1'
+        PPI::Token::Structure  	';'
   PPI::Token::Whitespace  	'\n'
